# aspz

./: README.md
pr1/: README.md
pr1/task2/: script.sh
pr1/task3/: CMakeLists.txt  Makefile  commands.txt
pr1/tast1/: Makefile  erf_module.c  erf_module.h  main.c  program
pr2/: README.md
pr2/task1/: segments.sh  time_t_overflow.c
pr2/task2/: commands.sh  hello  hello2  hello3  hello4  hello4.c  hello5.c  hello5_debug  hello6.c  hello6_opt
pr2/task3/: stack_test  stack_test.c
pr2/task4/: commands.txt  stack_test  stack_test.c
pr2/task5/: test  test.c
pr2/task6/: test_heap  test_heap.c
pr3/: README.md
pr3/task1/: commands.txt
pr3/task2/: commands.txt
pr3/task3/: Dockerfile  commands.txt  dice_simulator.c
pr3/task4/: Dockerfile  commands.txt  lottery_simulator.c
pr3/task5/: Dockerfile  commands.txt  file_copy.c
pr3/task6/: commands.txt  stack_limit  stack_limit.c
pr3/task7/: commands.txt  thread_limit.c
pr4/: README.md
pr4/task1/: malloc_test  malloc_test.c
pr4/task2/: malloc_test  malloc_test.c
pr4/task3/: malloc_test_zero  malloc_test_zero.c
pr4/task4/: correct_program  correct_program.c  test  test.c
pr4/task5/: realloc_test  realloc_test.c
pr4/task6/: realloc_test  realloc_test.c
pr4/task7/: realloc_test.c  reallocarray_test.c
pr4/task8/: my_malloc  my_malloc.c
pr5/: README.md
pr5/task1/: uninitialized  uninitialized.c
pr5/task2/: out_of_bounds.c
pr5/task3/: fake_pointer.c
pr6/: README.md
pr6/task1/: Dockerfile  main.c
pr6/task2/: Dockerfile
pr7/: README.md
pr8/: README.md
pr9/: README.md
(+61 files in other folders)
